@@ -22,8 +22,6 @@ export(row_bartlett)
 export(col_bartlett)
 export(row_jarquebera)
 export(col_jarquebera)
-export(row_ievora)
-export(col_ievora)
 export(row_flignerkilleen)
 export(col_flignerkilleen)
 export(row_levene)
